tests/negative/test_expr_un_add_bad_type.orb
fnc main() {
    ptr x = null;
    +x;
}